Fix links on mobile
Panzoom library prevents touch actions by default. We disable this, but then need to add CSS to stop weird stuff happening (specifically: touch-action: none).

--- a/resources/css/gvexport.css
+++ b/resources/css/gvexport.css
@@ -102,6 +102,9 @@
     width: 100%;
     height: 100%;
     margin: 0;
+    touch-action: none;
+    border: 1px solid black;
+    overflow: hidden;
 }
 
 .picker-label {
